# rust-media

./: .gitignore  Cargo.toml  audiodecoder.rs  audioformat.rs  build.rs  container.rs  lib.rs  makefile.cargo  mkvparser.cpp  playback.rs  videodecoder.rs
codecs/: aac.rs  libavcodec.rs  vorbis.rs  vpx.rs
containers/: gif.rs  mkv.rs  mp4.rs  ogg.rs
example/: Cargo.toml  example.rs
