[package]

name = "rust-media-example"
version = "0.1.0"
authors = ["The Servo Project Developers"]

[[bin]]

name = "example"
path = "example.rs"

[dependencies.rust-media]

path = ".."
features = ["ffmpeg"]

[dependencies.clock_ticks]

git = "https://github.com/tomaka/clock_ticks.git"

[dependencies.sdl2]

git = "https://github.com/nukep/rust-sdl2"
rev = "c7b61f1eb3c6635695960392d652731974afe910"

[dependencies.sdl2-sys]

git = "https://github.com/nukep/rust-sdl2"
rev = "c7b61f1eb3c6635695960392d652731974afe910"
path = "sdl2-sys"

